--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>WDI Student Fun Facts</title>
   <!-- Google Icon Fonts used by Materialize -->
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Materialize CSS Framework -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-  <link rel="stylesheet" href="stylesheets/style.css"/>
+  <link rel="stylesheet" href="stylesheets/style.css" />
 </head>
+
 <body>
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper">
         <a href="" class="brand-logo left">WDI Student Fun Facts</a>
+        <a href="" class="brand-logo left">WDI Student Fun Facts</a>
+        <!-- new html below -->
+        <ul class="right">
+          <$ if (user) { $>
+            <li>
+              <a href="/logout">
+                <i class="material-icons left">trending_flat</i>Logout</a>
+            </li>
+          <$ } else { $>
+            <li>
+              <a href="/auth/google">
+                <i class="material-icons left">vpn_key</i>Login with Google</a>
+            </li>
+          <$ } $>
+        </ul>
       </div>
     </nav>
   </div>
@@ -68,4 +85,5 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
   <script src="javascripts/app.js"></script>
 </body>
+
 </html>
